welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Invalid literal number
for (a<- 1to 6) { if (estSurBiscuit) bg = true ; avance 
         ^Program:8: error: ')' expected but '}' found.
} 
^