welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var bg = false 
for (a<- 1to 6) { if (estSurBiscuit) bg = true ; avance 
}
recule (6)
return bg
}